ini/test/channels/person_sync_pipeline.ini

import "ini/lib/collect.ini"
import "ini/lib/io.ini"

declare type Person = [firstName:String, lastName:String, middleName:String, wikipedia:String]
declare channel +wikipedia_in(Person)
declare channel +wikipedia_out(Person)
declare channel +wikipedia_stop(Boolean)

process enrich() {
	$(c1) c1 = @consume(p) : [from = wikipedia_in] {
		sleep(10)
		case p ~ Person[firstName, lastName] {
			println("Wikipedia Enrichment for {p.firstName} {p.lastName}")
			case p.middleName {
				url = url("https://en.wikipedia.org/wiki/{p.firstName}_{p.middleName}_{p.lastName}")
			} else {
				url = url("https://en.wikipedia.org/wiki/{p.firstName}_{p.lastName}")
			}
			case p.firstName == "Unknown" && p.lastName == "Person" {
				url = url("wrong url") // error
			}
			println("Fetching Wikipedia page: "+url)
			sleep(10) //p.wikipedia = fetch(url)
			p.wikipedia = "mock"
			case p ~ Person[wikipedia] {
				println("Sending back enriched person for "+url)
				wikipedia_out.produce(p)
			}
		}
	}
	c2 = @consume(stop) : [from = wikipedia_stop] && stop {
		stop(c1)
		stop(c2)
	}
	@error(error) {
		case url {
			println("ERROR: " + url)
		}
	}
}

function send_person_db() {
	persons = [Person[firstName="Jacques", lastName="Chirac"], 
	           Person[firstName="Barack", lastName="Obama"], 
	           Person[firstName="Albert", lastName="Einstein"],
	           Person[firstName="Titi"],
	           Person[firstName="Unknown", lastName="Person"],
	           Person[firstName="Edsger", middleName="W.", lastName="Dijkstra"]]
	persons.foreach(p => {
		case p ~ Person[firstName, lastName] {
			println("Sending person {p} for enrichment")
			wikipedia_in.produce(p)
		} else {
			println("Skipping wrong person {p}")
		}
	})
}

enrich()
send_person_db()
sleep(100)
wikipedia_stop.produce(true)
